[package]
name = "parfBack"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
futures = "0.3.31"
futures-util = "0.3.31"
mongodb = { version = "3.1.0", features = ["sync"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = "1.40.0"
tokio-tls = "0.3.1"
uuid = "1.10.0"

